--- a/package.json
+++ b/package.json
@@ -3,10 +3,15 @@
   "private": true,
   "dependencies": {
     "@rails/webpacker": "^4.0.7",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
     "ts-loader": "^6.0.4",
     "typescript": "^3.5.3"
   },
   "devDependencies": {
+    "tslint": "^5.18.0",
+    "tslint-config-prettier": "^1.18.0",
+    "tslint-react": "^4.0.0",
     "webpack-dev-server": "^3.8.0"
   }
 }
